--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,9 @@ install_requires =
     numpy
     pandas
     requests
+    mkdocs
+    mkdocstrings-python
+    mkdocs-material
 
 [options.packages.find]
 where = src
