--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Project
 site_name: JeudiDejs de la Tech
-site_url: https://Lamatkhan.github.io/Mkdocs
+site_url: https://lamatkhan.github.io/Mkdocs
 repo_url: https://github.com/Lamatkhan/Mkdocs
 edit_uri: ""
 
