--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-__pycache__/
+/__pycache__/
 .vscode/
 AyEnv/
 *.egg
@@ -6,6 +6,6 @@ mkdocs_env/
 *.egg-info
 .vscode
 settings.json
-.gitignore
 tests/__pycache__/test_math.cpython-311.pyc
+/site/
 
