--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,7 +46,7 @@ theme:
     - announce.dismiss
     - navigation.tabs
 
-# Add extensio
+# Add extensions
 markdown_extensions:
   tables:
   admonition:
@@ -70,4 +70,4 @@ markdown_extensions:
     custom_fences:
     - name: mermaid
       class: mermaid
-      format: !!python/name:pymdownx.superfences.fence_code_format ''
+      format: !!python/name:pymdownx.superfences.fence_code_format
