--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ install_requires =
     mkdocs
     mkdocstrings-python
     mkdocs-material
+    mkdocs-glightbox
 
 [options.packages.find]
 where = src
