--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,8 @@ install_requires =
     mkdocstrings-python
     mkdocs-material
     mkdocs-glightbox
+    mkdocs-badges
+
 
 [options.packages.find]
 where = src
